finished header and addded four boxes in main section plus header

--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <title>Landing Page</title>
     <link href="styles.css" rel="stylesheet">
 </head>
-<body>
+<body style="font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">
     <div class="heading-capsule">
         <div class="content">
             <div class="heading">
-                <p>Header Logo</p>
-                <div class="header-links">
-                    <a href="#">header link one</a>
-                    <a href="#">header link two</a>
-                    <a href="#">header link three</a>
+                <p style="font-size: 24px; font-weight: 600;">Header Logo</p>
+                <div class="header-links" style="display: flex; gap: 16px;">
+                    <a class="link" href="#">header link one</a>
+                    <a class="link" href="#">header link two</a>
+                    <a class="link" href="#">header link three</a>
                 </div>
             </div>
             <div class="intro">
                 <div class="web-description">
-                    <p>This website is awesome</p>
-                    <p class="secondary">This website has some subtext that goes here under the main title.
+                    <p style="font-size: 48px; font-weight: bold; margin: 0; width: 350px;">This website is awesome</p>
+                    <p class="secondary" style="font-weight: 300; margin-top: 0; margin-bottom: 10px;">This website has some subtext that goes here under the main title.
                           It's a smaller font and the color is lower contrast
                     </p>
                     <button class="signup">Sign Up</button>
@@ -33,6 +33,29 @@
         </div> 
     </div>
     <div class="main">
+        <div class="main-header" style="font-size: 36px; font-weight: bolder;">Some random information.</div>
+        <div class="boxes">
+            <div class="box-capsule">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration
+                    or image</div>
+            </div>
+            <div class="box-capsule">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration
+                    or image</div>
+            </div>
+            <div class="box-capsule">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration
+                    or image</div>
+            </div>
+            <div class="box-capsule">
+                <div class="box"></div>
+                <div class="box-text">this is some subtext under an illustration
+                    or image</div>
+            </div>
+        </div>
         <div class="quote-capsule"></div>
         <div class="signup-capsule"></div>
     </div>
